CSS-FIX: New skills count align

--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,7 @@ span.v-close{
     overflow-y: auto;
     -webkit-transition: left 1s, right 1s;
     transition: left 1s, right 1s;
-	z-index: 1;
+    z-index: 1;
 }
 .sidepanel.show {
 	left: -10px;
@@ -503,7 +503,12 @@ ul.courses{
     transform: scale(1.3);
     -webkit-transform-origin: 0 0;
     -ms-transform-origin: 0 0;
-    transform-origin: -650% 1350%;
+    transform-origin: -125px 220px;
+    margin: 0px 0px 0px 10px;
+    padding: 10px 0px 0px 0px;
+    width: 35px;
+    height: 35px;
+    border-radius: 20px;
 }
 
 .panel {
@@ -617,4 +622,9 @@ html[dir="rtl"] .nano {
 }
 html[dir="rtl"] .skill{
     right: 37px;
+}
+
+html[dir="rtl"] .lightbg{
+    transform-origin:125px 220px;
+    margin: 0px 10px 0px 0px;
 }
